--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-essentials": "^6.4.1",
     "@storybook/addon-links": "^6.4.1",
     "@storybook/react": "^6.4.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
@@ -44,6 +45,7 @@
     "vite": "^2.6.14"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
